apps/louis/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: louis-gateway
spec:
  addresses:
    - type: IPAddress
      value: 10.140.79.6
  gatewayClassName: cilium
  listeners:
    - name: https-ami
      hostname: ami.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: openwebui-tls
            kind: Secret
    - name: https-ollama
      hostname: ollama.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ollama-tls
            kind: Secret
    - name: https-litellm
      hostname: litellm.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: litellm-tls
            kind: Secret
    - name: https-bridge-gptr
      hostname: gptr-mcp.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: bridge-gptr-tls
            kind: Secret
    - name: https-docling
      hostname: docling.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: docling-tls
            kind: Secret
    - name: https-chromadb
      hostname: chromadb.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: chromadb-tls
            kind: Secret
    - name: https-labelstudio
      hostname: labelstudio.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: labelstudio-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - annotation
    - name: https-fiftyone
      hostname: fiftyone.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: fiftyone-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - annotation
    - name: https-argo-workflows
      hostname: argo-workflows.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: argo-workflows-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - argo-workflows
    - name: https-librechat
      hostname: librechat.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: librechat-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - librechat
    - name: https-doctr
      hostname: doctr.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: doctr-tls
            kind: Secret
    - name: https-gcnotify
      hostname: gcnotify.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: gcnotify-tls
            kind: Secret
    # - name: https-ragflow
    #   hostname: ragflow.inspection.alpha.canada.ca
    #   port: 443
    #   protocol: HTTPS
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: ragflow-tls
    #         kind: Secret
    #   allowedRoutes:
    #     namespaces:
    #       from: Selector
    #       selector:
    #         matchExpressions:
    #           - key: kubernetes.io/metadata.name
    #             operator: In
    #             values:
    #               - ragflow
    # - name: https-ragflow-api
    #   hostname: ragflow-api.inspection.alpha.canada.ca
    #   port: 443
    #   protocol: HTTPS
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: ragflow-api-tls
    #         kind: Secret
    #   allowedRoutes:
    #     namespaces:
    #       from: Selector
    #       selector:
    #         matchExpressions:
    #           - key: kubernetes.io/metadata.name
    #             operator: In
    #             values:
    #               - ragflow
    # - name: https-ragflow-mcp
    #   hostname: ragflow-mcp.inspection.alpha.canada.ca
    #   port: 443
    #   protocol: HTTPS
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: ragflow-mcp-tls
    #         kind: Secret
    #   allowedRoutes:
    #     namespaces:
    #       from: Selector
    #       selector:
    #         matchExpressions:
    #           - key: kubernetes.io/metadata.name
    #             operator: In
    #             values:
    #               - ragflow
